Fixed bug of text shifted down.

--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,10 @@
 @tailwind base;
+
+@layer base {
+	img {
+		@apply inline-block;
+	}
+}
+
 @tailwind components;
 @tailwind utilities;
